[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Character/Idle/BlackCreep4.png" type="Texture" id=1]
[ext_resource path="res://Assets/Character/Idle/BlackCreep3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Character/Walk/BlackCreep2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Character/Walk/BlackCreep3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Character/Walk/BlackCreep1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=6]
[ext_resource path="res://Music/JUMP.mp3" type="AudioStream" id=7]
[ext_resource path="res://Music/KeySFX.mp3" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.17074, 3.49221 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.29853, 5.07619 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.40458, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 1.25
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 45, 0 )
initial_velocity = 25.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 0.75
color_ramp = SubResource( 6 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
z_index = 2
script = ExtResource( 6 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Walk"
frame = 1
playing = true

[node name="Col" type="CollisionShape2D" parent="."]
position = Vector2( -0.475432, 0.478687 )
shape = SubResource( 2 )

[node name="Cam" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.12, 0.12 )
limit_left = 0
limit_top = 0
limit_right = 192
limit_bottom = 95
smoothing_enabled = true
editor_draw_limits = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="Col" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.45631, 0.461414 )
shape = SubResource( 3 )

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 1.0
pitch_scale = 1.75

[node name="KeySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 1.75

[node name="Switch" type="Timer" parent="."]

[node name="DeathFX" type="Particles2D" parent="."]
emitting = false
amount = 32
lifetime = 1.25
one_shot = true
explosiveness = 0.95
randomness = 1.0
process_material = SubResource( 4 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Switch" to="." method="_on_Switch_timeout"]
